--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.Brew"
         tools:targetApi="31">
         <activity
+            android:name=".MainLayout"
+            android:exported="false"
+            android:label="@string/title_activity_main_layout"
+            android:theme="@style/Theme.Brew" />
+        <activity
+            android:name=".CoffeeListActivity"
+            android:exported="false"
+            android:label="@string/title_activity_coffee_list"
+            android:theme="@style/Theme.Brew" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
